--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abhishek-sh111.github.io/condi-app/",
+  "homepage": "https://srisaicondimentsinfo.in",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
