--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
-"homepage": "https://abhishek-sh111.github.io/condi-app",
+  "homepage": "https://srisaicondimentsinfo.in",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.24.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -18,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b main -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^22.13.2",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "gh-pages": "^6.3.0"
   }
 }
