--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.24.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
